<resources>
    <string name="app_name">BookCabDemo</string>

    <!-- Offers screen -->
    <string name="titleOffers">BookCab</string>
    <string name="captionOffers">Avail offers</string>
    <!--
    <string name="firstride">Up to 50% Cash-Back On First Ride</string>
    <string name="freeride">Lucky Free Ride</string>
    <string name="discount">Long Distance Discount</string>
    <string name="cashback">Get Rs.50 cash-back</string> -->

    <array name="offers">
        <item>Up to 50% Cash-Back On First Ride</item>
        <item>Lucky Free Ride</item>
        <item>Long Distance Discount</item>
        <item>Get Rs.50 cash-back</item>
    </array>

    <string name="titleHome">Home</string>

    <string name="titleProfile">Profile</string>
    <string name="titleRide">Ride</string>
    <string name="titleHistory">History</string>
    <string name="titleLocation">Location</string>

    <!-- Login sheet labels -->
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="cab_register">New to BookCab? Register here</string>
    <string name="open_modal_bottom_sheet">Open Modal Bottom Sheet</string>

    <!-- Register sheet labels -->
    <string name="enter_user_name">User Name*</string>
    <string name="enter_password">Password*</string>
    <string name="re_enter_password">Re-Enter Password*</string>
    <string name="enter_email">Enter mail id</string>
    <string name="contact_number">Contact Number*</string>
    <string name="register">REGISTER</string>

    <!-- Profile sheet labels -->
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="home">HOME</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="enter_drop_location">Enter Drop Location</string>
    <string name="enter_pick_up_location">Enter Pick-Up Location</string>
    <string name="rate">Rate</string>
    <string name="your_ride">Your Ride</string>
    <string name="ride_type">Sedan, AC</string>
    <string name="rate_type">Rs 10 per KM</string>
    <string name="select_city">Select City</string>
    <string name="select_ride">Select Your Ride</string>

    <!-- Cities -->
    <string-array name="cities">
        <item>Bangalore</item>
        <item>Pune</item>
        <item>Delhi</item>
        <item>Chennai</item>
    </string-array>

    <!-- Default location addresses -->
    <string name="locPickUp">15 Vision Industrial Park, Kendal Avenue, London</string>
    <string name="locDropOff">Uxbridge Rd, Southall UB1 3AF, London</string>

    <!-- Default Ride Details -->
    <string name="rideDateTime">Sat, apr 17, 01:12 PM</string>
    <string name="rideCRN">CRN: 5335117890</string>
    <string name="rideAmt">$10</string>
    <string name="default_ride_name">Mercedese Benz SL</string>
    <string name="channel_name">RideBooked</string>
    <string name="channel_desc">Channel to notify user that ride has been booked</string>
    <string name="ride_booked">Ride Booked</string>
    <string name="your_ride_has_been_booked">Your ride has been booked</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>

    <!-- Default card rank : Queen -->
    <string name="defaultRank">Q</string>

</resources>
