<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <include
        android:id="@+id/layoutTitle"
        layout="@layout/view_title"
        android:layout_marginTop="@dimen/title_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_margin"
        app:dividerThickness="@dimen/md_margin"
        app:dividerColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/md_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/select_city" />

            <Spinner
                android:id="@+id/spinCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/vlg_margin"
                android:entries="@array/cities"
                android:prompt="@string/app_name" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_ride"
                android:textColorHint="@color/colorInactive"
                android:text="@string/ride_type"
                android:enabled="false"
                android:textColor="@color/colorInactive"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rate"
                android:textColorHint="@color/colorInactive"
                android:text="@string/rate_type"
                android:enabled="false"
                android:textColor="@color/colorInactive"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPickUpLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pick_up_location"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editDropLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_drop_location"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="@dimen/appBtnW"
                android:layout_height="@dimen/appBtnH"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/sm_margin"
                android:layout_marginBottom="@dimen/md_margin"
                android:text="@string/confirm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="@dimen/appBtnW"
                android:layout_height="@dimen/appBtnH"
                android:layout_toStartOf="@+id/btnConfirm"
                android:layout_marginHorizontal="@dimen/sm_margin"
                android:layout_marginBottom="@dimen/md_margin"
                android:text="@string/cancel" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

