<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_home_full_with_logo5">

    <include
        android:id="@+id/layoutTitle"
        layout="@layout/view_title"
        android:layout_marginTop="@dimen/title_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_user_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEnterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sm_margin"
            app:boxBackgroundColor="@color/colorOnSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="@dimen/appBtnW"
                android:layout_height="@dimen/appBtnH"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/sm_margin"
                android:layout_marginBottom="@dimen/md_margin"
                android:text="@string/save"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHome"
                android:layout_width="@dimen/appBtnW"
                android:layout_height="@dimen/appBtnH"
                android:layout_toStartOf="@+id/btnSave"
                android:layout_marginHorizontal="@dimen/sm_margin"
                android:layout_marginBottom="@dimen/md_margin"
                android:text="@string/home"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>

